force-app/main/default/objects/custom_create288__c/custom_create288__c.object-meta.xml
<CustomObject>
    <label>Custom created object288</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects288</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>