force-app/main/default/objects/custom_create288__c/fields/custom_create_288field545__c.field-meta.xml
<CustomField>
    <fullName>custom_create_288field545__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 288field545</label>
    <type>Checkbox</type>
</CustomField>